Interpreter/Examples/good/example1.jam
/* This is example of print function */
main {
    print ("Hello world!");
}
