Interpreter/Examples/bad/example7.jam
/* Throwing exception without catching it */
main {
    Exception("My exception");
}
